--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap"
     rel="stylesheet">
   <link rel="stylesheet" href="style/portfolio.css">
+  <script src="https://kit.fontawesome.com/3e83313bff.js" crossorigin="anonymous"></script>
 </head>
 
 <body class="open-sans-normal">
@@ -29,8 +30,8 @@
         <h4 class="banner-greetings dark-2">Hi, I  am</h4>
         <h1 class="banner-title">Mary Hardy</h1>
         <p class="banner-description">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
-        <button class="btn">Download CV</button>
-        <button class="btn">Contact</button>
+        <button class="btn"><i class="fa-solid fa-download"></i> Download CV</button>
+        <button class="btn"><i class="fa-solid fa-phone"></i> Contact</button>
       </div>
       <img class="banner-profile-pic" src="images/hardy.png" alt="">
     </div>
@@ -143,7 +144,7 @@
         </div>
       </div>
       <div class="text-center resume-download-cv">
-        <button class="btn">Download CV</button>
+        <button class="btn"><i class="fa-solid fa-download"></i> Download CV</button>
       </div>
     </section>
   </main>
